chore(deps): add power mockito